objects/SGR_Product_Group__c.object
<CustomObject>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <label>FIPS Code</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SGR_Client_ID__c</fullName>
        <label>Client ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RENEWALS</fullName>
                </value>
                <value>
                    <fullName>QUOTING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGR_Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGR_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SGR_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SGR_Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
                <value>
                    <fullName>NDSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGR_Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>COMA</fullName>
                </value>
                <value>
                    <fullName>CPAA</fullName>
                </value>
                <value>
                    <fullName>EAML</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>HA</fullName>
                </value>
                <value>
                    <fullName>HCS2</fullName>
                </value>
                <value>
                    <fullName>HMSG</fullName>
                </value>
                <value>
                    <fullName>HSC1</fullName>
                </value>
                <value>
                    <fullName>HWB</fullName>
                </value>
                <value>
                    <fullName>IMTL</fullName>
                </value>
                <value>
                    <fullName>IMTS</fullName>
                </value>
                <value>
                    <fullName>JG</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>LGC</fullName>
                </value>
                <value>
                    <fullName>LGL</fullName>
                </value>
                <value>
                    <fullName>LGN</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MAC</fullName>
                </value>
                <value>
                    <fullName>MARL</fullName>
                </value>
                <value>
                    <fullName>MBIL</fullName>
                </value>
                <value>
                    <fullName>MCCL</fullName>
                </value>
                <value>
                    <fullName>MCUL</fullName>
                </value>
                <value>
                    <fullName>MGC</fullName>
                </value>
                <value>
                    <fullName>MGL</fullName>
                </value>
                <value>
                    <fullName>MINAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGR_Product_Group_Code__c</fullName>
        <label>Product Group Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Product_Group_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Product Group External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Product_Group_Type__c</fullName>
        <label>Product Group Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Group</label>
    <listViews>
        <fullName>Today_Product_Groups</fullName>
        <columns>NAME</columns>
        <columns>SGR_Product_Group_Type__c</columns>
        <columns>SGR_Product_Group_Code__c</columns>
        <columns>SGR_Division__c</columns>
        <columns>SGR_Effective_Date__c</columns>
        <columns>SGR_Market_Segment__c</columns>
        <columns>SGR_Funding_Type__c</columns>
        <columns>FIPS_Code__c</columns>
        <columns>SGR_Expiry_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Today Product Groups</label>
    </listViews>
    <nameField>
        <label>Product Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>